# iatlas

./: .gitignore  ANALISE_PROGRESSO.md  ARCHITECTURE.md  PLANO_IATLAS.md  README.md  ROADMAP.md
.github/workflows/: deploy.yml
iatlas-backend/: .dockerignore  .gitignore  API.md  API_QUICKSTART.md  Dockerfile  README.md  Untitled  __init.py__  config.py  fly.toml  main.py  pyproject.toml  requirements.txt
iatlas-backend/database/: db.py
iatlas-backend/models/: __init__.py  document.py  study_session.py  user.py
iatlas-frontend/: .prettierignore  README.md  package-lock.json  package.json
