[project]
name = "iatlas-backend"
version = "0.1.0"
description = "Backend IAtlas - Ajudante de estudos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Framework Web
    "fastapi==0.128.0",
    "starlette==0.50.0",
    "uvicorn==0.40.0",
    "python-multipart==0.0.21",

    # Validação e Schemas
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "annotated-types==0.7.0",
    "annotated-doc==0.0.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    
    # Autenticação e Segurança
    "bcrypt==5.0.0",
    "passlib==1.7.4",
    "python-jose==3.5.0",
    "cryptography==46.0.3",
    "cffi==2.0.0",
    "pycparser==2.23",
    "ecdsa==0.19.1",
    "pyasn1==0.6.1",
    "rsa==4.9.1",
    
    # Banco de Dados
    "sqlalchemy==2.0.45",
    "psycopg2-binary==2.9.11",
    "greenlet==3.3.0",
    
    # LangChain e IA
    "langchain==1.2.0",
    "langchain-core==1.2.6",
    "langchain-gemini==0.1.1",
    "langgraph==1.0.5",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.3.1",
    "langsmith==0.6.1",
    
    # Processamento de PDF
    "pdfplumber==0.11.9",
    "pdfminer-six==20251230",
    "pypdfium2==5.3.0",
    "pillow==12.1.0",
    
    # HTTP e Requisições
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "h11==0.16.0",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "slowapi==0.1.9",
    "limits==5.6.0",
    
    # Utilitários e Configuração
    "python-dotenv==1.2.1",
    "orjson==3.11.5",
    "ormsgpack==1.12.1",
    "pyyaml==6.0.3",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "tenacity==9.1.2",
    "uuid-utils==0.12.0",
    "deprecated==1.3.1",
    "wrapt==2.0.1",
    
    # Testes
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "coverage==7.13.1",
    "pluggy==1.6.0",
    "iniconfig==2.3.0",
    
    # Dependências de Sistema e Core
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "urllib3==2.6.2",
    "anyio==4.12.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "packaging==25.0",
    "six==1.17.0",
    "pygments==2.19.2",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
    "logging==0.4.9.6",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "ruff==0.8.4",  # Linter rápido (opcional, mas recomendado)
]

# Configuração do Black
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # diretórios
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''